<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idDrawerL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/barcode_img"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/barcode_img">

        </ImageView>

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="75dp"
            android:backgroundTint="#A31A17"
            android:padding="15dp"
            android:text="Select Photo"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/idBtnScanWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:backgroundTint="#A31A17"
            android:padding="15dp"
            android:paddingStart="75dp"
            android:paddingEnd="75dp"
            android:text="@string/scan_barcode"
            android:textColor="@color/white"
            android:textSize="15sp">

        </Button>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/idBtnRescan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#A31A17"
                android:padding="15dp"
                android:text="@string/rescan"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/BtnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="15dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="#A31A17"
                android:textSize="15sp">

            </Button>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/idnavigationV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>